--- a/views/game.hbs
+++ b/views/game.hbs
@@ -1,5 +1,13 @@
-<div id="game"></div>
+<script>
+    var PLAYER_ID = '{{player.id}}';
+</script>
 
 <script src="/scripts/libraries/crafty/dist/crafty.js"></script>
 <script src="/scripts/libraries/socket.io-client/socket.io.js"></script>
-<script src="/scripts/app/index.js"></script>
+<script src="/scripts/app/game.js"></script>
+<style>
+    html, body, .container {
+        margin: 0;
+        padding: 0;
+    }
+</style>
