--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/styles/common.css" />
-  </head>
-  <body>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="/scripts/libraries/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/scripts/libraries/bootstrap/dist/css/bootstrap-theme.css"/>
+    <link rel="stylesheet" href="/scripts/libraries/sweetalert/dist/sweetalert.css"/>
+    <link rel="stylesheet" href="/styles/common.css"/>
+    <script src="/scripts/libraries/jquery/dist/jquery.js"></script>
+    <script src="/scripts/libraries/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/scripts/libraries/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="/scripts/libraries/socket.io-client/socket.io.js"></script>
+    <script src="/scripts/app/lobby.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+<div class="container">
     {{{body}}}
-  </body>
+</div>
+</body>
 </html>
