--- a/views/game.hbs
+++ b/views/game.hbs
@@ -14,4 +14,12 @@
     canvas {
         background: url(/assets/background.png);
     }
+
+    .rotate {
+        -moz-transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+        -o-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
 </style>
